Fix index alignment remove photo

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,7 +33,7 @@ body {
 #link-hub {
     font-family: 'Roboto', Helvetica, sans-serif;
     height: min-content;
-    padding-left: 20px;
+    padding: 20px;
     background-color: var(--main-bg-color);
     display: flex;
     justify-content: space-evenly;
@@ -85,7 +85,6 @@ body {
     gap: 20px;
 
     padding-top: 15px;
-    padding-bottom: 30px;
     margin-top: auto;
 
     /* counteract link-hub left padding */
